# opa-policy-package

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: action-policy-mapping.md  policy-lifecycle.md  policy-package-mechanism.md  transfer-scenarios-overview.md
phase1-no-opa/: README.md  pyproject.toml
phase1-no-opa/src/rucio_no_opa_policy/: __init__.py  permission.py  rules.py
phase1-no-opa/src/rucio_no_opa_policy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phase2-opa/: README.md  pyproject.toml
phase2-opa/docker/: bootstrap-db.py  docker-compose.yml  ingest_policies.py  rucio.cfg  smoke_test.sh
phase2-opa/rego/: authz.rego
phase2-opa/src/rucio_opa_policy/: opa_client.py  permission.py
phase2-opa/src/rucio_opa_policy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phase3-opa/: README.md  pyproject.toml
phase3-opa/docker/: bootstrap-db.py  docker-compose.yml  ingest_policies.py  rucio.cfg  smoke_test.sh
phase3-opa/rego/: authz.rego
phase3-opa/src/rucio_opa_v2_policy/: __init__.py  opa_client.py  permission.py
phase3-opa/src/rucio_opa_v2_policy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
phase4-opa/: LICENSE  README.md  pyproject.toml
phase4-opa/docker/: docker-compose.yml  idpsecrets.json  ingest_policies.py  keycloak-realm.json  rucio.cfg  smoke_test.sh
phase4-opa/rego/: authz.rego
phase4-opa/src/rucio_opa_v3_policy/: opa_client.py  permission.py
tests/: conftest.py  test_phase1_e2e_scenarios.py  test_phase1_permission.py  test_phase1_rules.py  test_phase2_e2e_scenarios.py  test_phase2_opa.py  test_phase3_e2e_scenarios.py  test_phase3_opa.py  test_phase4_e2e_scenarios.py
