[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rucio-opa-policy"
version = "0.1.0"
description = "Phase 2 — Rucio policy package (OPA as PDP)"
authors = [{ name = "someone", email = "placeholder@cern.ch" }]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["rucio>=35.0.0", "pytest>=7.0", "pytest-cov", "responses"]

[tool.setuptools.packages.find]
where = ["src"]
